--- a/css/styles.css
+++ b/css/styles.css
@@ -6,25 +6,23 @@
 
 body {
   background-color: var(--blanco);
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
 }
 
 /**Clases Globales**/
 .g-tituloPrincipal {
   margin-top: 88px;
   font-size: 57px;
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   text-align: center;
   line-height: 4rem;
 }
-
 @media (max-width: 828px) {
   .g-tituloPrincipal {
     margin-top: 44px;
     font-size: 36px;
   }
 }
-
 @media (max-width: 551px) {
   .g-tituloPrincipal {
     font-size: 32px;
@@ -33,9 +31,8 @@ body {
 
 .g-tituloSeccion {
   font-size: 45px;
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
 }
-
 @media (max-width: 828px) {
   .g-tituloSeccion {
     font-size: 28px;
@@ -44,10 +41,9 @@ body {
 
 .g-tituloCards {
   font-size: 32px;
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   font-weight: 700;
 }
-
 @media (max-width: 828px) {
   .g-tituloCards {
     font-size: 24px;
@@ -56,14 +52,28 @@ body {
 }
 
 .g-button {
-  color: #ffffff;
+  color: #ffffff !important;
   background-color: #3FAF67;
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
   font-weight: 800;
   text-transform: uppercase;
   border: none;
   border-radius: 5px;
-  padding: .75em 3em;
+  width: 200px;
+  height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center !important;
+      -ms-flex-align: center !important;
+          align-items: center !important;
+  -webkit-box-pack: center !important;
+      -ms-flex-pack: center !important;
+          justify-content: center !important;
   margin: 5px 0;
   text-decoration: none;
   cursor: pointer;
@@ -103,30 +113,23 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 .g-coordinemos-container > * {
   margin: 15px 0;
-}
-
-.g-coordinemos-container > .g-button {
-  padding-top: 8px;
 }
 
 .g-contacto {
   width: 100%;
   background: #F2ECDE;
 }
-
 .g-contacto :first-child {
   margin: 100px 0 11px 0;
 }
-
 .g-contacto :last-child {
   margin: 35px 0 120px 0;
 }
 
 /**Mixins y extends**/
-.g-contacto, #introProyectos, #proyectos, #p-servicios #principalServicios, #p-servicios #arquitecturaGeneral, #p-servicios #renovar, #p-nosotros #nosotros {
+#p-nosotros #nosotros, #p-servicios #renovar, #p-servicios #arquitecturaGeneral, #p-servicios #principalServicios, #proyectos, #introProyectos, .g-contacto {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -142,7 +145,7 @@ body {
 
 /**Nav**/
 nav .cajaNav {
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
   font-weight: 700;
   font-size: 18px;
   display: -webkit-box;
@@ -154,7 +157,6 @@ nav .cajaNav {
   -webkit-box-shadow: 4px 4px whitesmoke;
           box-shadow: 4px 4px whitesmoke;
 }
-
 nav .cajaNav .barNav {
   margin: 0 10px 0 0;
   display: -webkit-box;
@@ -172,7 +174,6 @@ nav .cajaNav .barNav {
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
 }
-
 nav .cajaNav .barNav li {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -183,17 +184,14 @@ nav .cajaNav .barNav li {
   padding: 0 20px;
   height: 100%;
 }
-
 nav .cajaNav .barNav li:hover {
   cursor: pointer;
 }
-
 nav .cajaNav .barNav li a {
   text-decoration: none;
   cursor: pointer;
   color: inherit;
 }
-
 nav .cajaNav .titNav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -208,16 +206,13 @@ nav .cajaNav .titNav {
   height: auto;
   width: 348px;
 }
-
 nav .cajaNav .titNav .toggle {
   display: none;
 }
-
 nav .cajaNav .titNav img {
   width: 123px;
   height: auto;
 }
-
 nav .cajaNav .botones {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -230,20 +225,16 @@ nav .cajaNav .botones {
           align-items: center;
   width: 340px;
 }
-
 nav .cajaNav .botones a {
   text-decoration: none;
   margin: 0 40px 0 0;
 }
-
 nav .cajaNav .toggle {
   display: none;
 }
-
 nav .navB {
   display: none;
 }
-
 @media (max-width: 828px) {
   nav {
     display: -webkit-box;
@@ -267,7 +258,7 @@ nav .navB {
         -ms-flex-align: center;
             align-items: center;
     background-color: #f2ecde;
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: "Nunito Sans", sans-serif;
     font-weight: 700;
     font-size: 18px;
   }
@@ -348,19 +339,16 @@ nav .navB {
           justify-content: center;
   text-align: center;
 }
-
 #p-index #landing p {
   padding: 10px;
   margin: 20px 0;
   font-size: 18px;
 }
-
 @media (max-width: 828px) {
   #p-index #landing p {
     font-size: 16px;
   }
 }
-
 #p-index #landing img {
   margin: 20px 0;
   width: 100%;
@@ -372,11 +360,9 @@ nav .navB {
 #introProyectos h2 {
   margin: 31px 0 72px 0;
 }
-
 #introProyectos p {
   margin: 20px;
 }
-
 #introProyectos .contenedorCards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -388,7 +374,6 @@ nav .navB {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
 }
-
 #introProyectos .contenedorCards .cards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -403,21 +388,18 @@ nav .navB {
   padding: 10px;
   font-size: 18px;
 }
-
 #introProyectos .contenedorCards .cards img {
   width: auto;
   height: 424px;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 @media (max-width: 1052px) {
   #introProyectos .contenedorCards .cards {
     max-width: 256px;
     font-size: 16px;
   }
 }
-
 @media (max-width: 828px) {
   #introProyectos .contenedorCards {
     -webkit-box-pack: center;
@@ -430,7 +412,6 @@ nav .navB {
     max-width: 256px;
   }
 }
-
 @media (max-width: 551px) {
   #introProyectos .contenedorCards {
     display: -webkit-box;
@@ -445,21 +426,18 @@ nav .navB {
     max-width: 328px;
   }
 }
-
 #introProyectos .contenedorCards h5 {
   margin-top: 20px;
 }
-
 #introProyectos .contenedorCards .card1 {
   margin-top: 192px;
 }
-
 #introProyectos .contenedorCards .card3 {
   margin-top: 120px;
 }
-
 @media (max-width: 827px) {
-  #introProyectos .contenedorCards .card1, #introProyectos .contenedorCards .card3 {
+  #introProyectos .contenedorCards .card1,
+#introProyectos .contenedorCards .card3 {
     margin-top: 0;
   }
 }
@@ -468,28 +446,23 @@ nav .navB {
 #proyectos h1 {
   margin-bottom: 48px;
 }
-
 #proyectos p {
   max-width: 686px;
   margin-bottom: 48px;
   font-size: 18px;
 }
-
 @media (max-width: 828px) {
   #proyectos p {
     font-size: 16px;
   }
 }
-
 #proyectos a {
   text-decoration: none;
   color: #000;
 }
-
 #proyectos a:visited {
   color: #000;
 }
-
 #proyectos .contenedorCards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -507,7 +480,6 @@ nav .navB {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 #proyectos .contenedorCards .cards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -522,21 +494,18 @@ nav .navB {
   padding: 10px;
   font-size: 18px;
 }
-
 #proyectos .contenedorCards .cards img {
   width: auto;
   height: 424px;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 @media (max-width: 1052px) {
   #proyectos .contenedorCards .cards {
     max-width: 256px;
     font-size: 16px;
   }
 }
-
 @media (max-width: 828px) {
   #proyectos .contenedorCards {
     -webkit-box-pack: center;
@@ -549,7 +518,6 @@ nav .navB {
     max-width: 256px;
   }
 }
-
 @media (max-width: 551px) {
   #proyectos .contenedorCards {
     display: -webkit-box;
@@ -564,30 +532,26 @@ nav .navB {
     max-width: 328px;
   }
 }
-
 #proyectos .contenedorCards h5 {
   margin: 28px 0 28px 0;
 }
-
 #proyectos .contenedorCards .card5 {
   margin-top: -70px;
 }
-
-#proyectos .contenedorCards .card1, #proyectos .contenedorCards .card4 {
+#proyectos .contenedorCards .card1,
+#proyectos .contenedorCards .card4 {
   margin-top: 106px;
 }
-
-#proyectos .contenedorCards .card3, #proyectos .contenedorCards .card6 {
+#proyectos .contenedorCards .card3,
+#proyectos .contenedorCards .card6 {
   margin-top: 42px;
 }
-
 #proyectos .contenedorCards .underline {
   font-size: 18px;
   font-weight: 400;
   color: #3FAF67;
   text-decoration: underline;
 }
-
 @media (max-width: 827px) {
   #proyectos .contenedorCards .cards {
     margin-top: 0;
@@ -598,7 +562,6 @@ nav .navB {
 #p-servicios #principalServicios h1 {
   margin-bottom: 28px;
 }
-
 #p-servicios #principalServicios img {
   width: 100%;
   height: auto;
@@ -607,22 +570,18 @@ nav .navB {
   max-height: 424px;
   margin: 30px 0 67px 0;
 }
-
 #p-servicios #principalServicios .textBox {
   max-width: 650px;
   margin-top: 25px;
 }
-
 #p-servicios #principalServicios p {
   font-size: 18px;
 }
-
 @media (max-width: 828px) {
   #p-servicios #principalServicios p {
     font-size: 16px;
   }
 }
-
 #p-servicios #principalServicios .contenedorCards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -634,7 +593,6 @@ nav .navB {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
 }
-
 #p-servicios #principalServicios .contenedorCards .cards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -649,21 +607,18 @@ nav .navB {
   padding: 10px;
   font-size: 18px;
 }
-
 #p-servicios #principalServicios .contenedorCards .cards img {
   width: auto;
   height: 424px;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 @media (max-width: 1052px) {
   #p-servicios #principalServicios .contenedorCards .cards {
     max-width: 190px;
     font-size: 16px;
   }
 }
-
 @media (max-width: 828px) {
   #p-servicios #principalServicios .contenedorCards {
     -webkit-box-pack: center;
@@ -676,7 +631,6 @@ nav .navB {
     max-width: 256px;
   }
 }
-
 @media (max-width: 551px) {
   #p-servicios #principalServicios .contenedorCards {
     display: -webkit-box;
@@ -691,31 +645,27 @@ nav .navB {
     max-width: 328px;
   }
 }
-
 #p-servicios #principalServicios .contenedorCards .segundoContenedor {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
-
 #p-servicios #principalServicios .contenedorCards .segundoContenedor .cardImg {
   margin-bottom: 21px;
 }
-
-#p-servicios #principalServicios .contenedorCards .segundoContenedor .card2, #p-servicios #principalServicios .contenedorCards .segundoContenedor .card4 {
+#p-servicios #principalServicios .contenedorCards .segundoContenedor .card2,
+#p-servicios #principalServicios .contenedorCards .segundoContenedor .card4 {
   margin-top: 160px;
 }
-
 @media (max-width: 828px) {
-  #p-servicios #principalServicios .contenedorCards .segundoContenedor .card2, #p-servicios #principalServicios .contenedorCards .segundoContenedor .card4 {
+  #p-servicios #principalServicios .contenedorCards .segundoContenedor .card2,
+#p-servicios #principalServicios .contenedorCards .segundoContenedor .card4 {
     margin-top: 0;
   }
 }
-
 #p-servicios #principalServicios .contenedorCards .segundoContenedor h3 {
   margin-bottom: 8px;
 }
-
 @media (max-width: 551px) {
   #p-servicios #principalServicios .contenedorCards .segundoContenedor {
     -webkit-box-orient: vertical;
@@ -724,16 +674,13 @@ nav .navB {
             flex-direction: column;
   }
 }
-
 #p-servicios #arquitecturaGeneral {
   background-color: #F2ECDE;
   padding: 60px;
 }
-
 #p-servicios #arquitecturaGeneral h2 {
   margin-bottom: 56px;
 }
-
 #p-servicios #arquitecturaGeneral .contenedorArquitectura {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -743,33 +690,28 @@ nav .navB {
           align-items: center;
   text-align: start;
 }
-
 #p-servicios #arquitecturaGeneral .contenedorArquitectura img {
   width: 100%;
   height: auto;
   max-width: 508px;
   margin-right: 10px;
 }
-
 #p-servicios #arquitecturaGeneral .contenedorArquitectura p {
   width: 100%;
   height: auto;
   max-width: 508px;
   font-size: 16px;
 }
-
 @media (max-width: 1052px) {
   #p-servicios #arquitecturaGeneral .contenedorArquitectura img {
     max-width: 400px;
   }
 }
-
 @media (max-width: 828px) {
   #p-servicios #arquitecturaGeneral .contenedorArquitectura img {
     max-width: 256px;
   }
 }
-
 @media (max-width: 600px) {
   #p-servicios #arquitecturaGeneral {
     padding: 58px 16px 64px 16px;
@@ -786,7 +728,6 @@ nav .navB {
     max-width: 328px;
   }
 }
-
 #p-servicios #renovar .imagen {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -799,7 +740,6 @@ nav .navB {
       flex-wrap: nowrap;
   margin-top: 48px;
 }
-
 #p-servicios #renovar .imagen .contenedorImagen {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -807,7 +747,6 @@ nav .navB {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
 }
-
 #p-servicios #renovar .imagen .contenedorImagen img {
   max-width: 508px;
   width: 100%;
@@ -816,17 +755,14 @@ nav .navB {
      object-fit: cover;
   padding: 10px;
 }
-
 #p-servicios #renovar .imagen .contenedorImagen :first-child {
   margin-top: 104px;
 }
-
 @media (max-width: 1052px) {
   #p-servicios #renovar .imagen .contenedorImagen img {
     max-width: 400px;
   }
 }
-
 @media (max-width: 828px) {
   #p-servicios #renovar .imagen .contenedorImagen :first-child {
     margin-top: 0;
@@ -835,7 +771,6 @@ nav .navB {
     max-width: 352px;
   }
 }
-
 @media (max-width: 740px) {
   #p-servicios #renovar .imagen .contenedorImagen :first-child {
     margin-top: 0;
@@ -844,7 +779,6 @@ nav .navB {
     max-width: 256px;
   }
 }
-
 @media (max-width: 600px) {
   #p-servicios #renovar .imagen {
     -webkit-box-orient: vertical;
@@ -865,20 +799,17 @@ nav .navB {
     max-width: 328px;
   }
 }
-
 #p-servicios #renovar .texto :first-child {
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
   font-size: 32px;
   font-weight: 700;
   margin: 102px 0 24px 0;
 }
-
 #p-servicios #renovar .texto :last-child {
   font-size: 18px;
   max-width: 508px;
   margin-bottom: 120px;
 }
-
 @media (max-width: 828px) {
   #p-servicios #renovar .texto :last-child {
     font-size: 16px;
@@ -898,18 +829,15 @@ nav .navB {
       -ms-flex-align: center;
           align-items: center;
 }
-
 #p-nosotros #nosotros #landing h1 {
   margin-bottom: 20px;
 }
-
 #p-nosotros #nosotros #landing img {
   margin: 20px 0;
   width: 100%;
   max-width: 1040px;
   height: auto;
 }
-
 #p-nosotros #nosotros #sobreNosotros {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -920,11 +848,9 @@ nav .navB {
           flex-direction: column;
   margin-bottom: 72px;
 }
-
 #p-nosotros #nosotros #sobreNosotros h2 {
   margin: 150px 0 48px 0;
 }
-
 #p-nosotros #nosotros .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -937,27 +863,23 @@ nav .navB {
       -ms-flex-align: center;
           align-items: center;
 }
-
 #p-nosotros #nosotros .container img {
   max-width: 448px;
   width: 100%;
   height: auto;
   margin: 30px;
 }
-
 #p-nosotros #nosotros .container p {
   max-width: 420px;
   text-align: start;
   margin: 30px;
   font-size: 16px;
 }
-
 @media (max-width: 828px) {
   #p-nosotros #nosotros #sobreNosotros h2 {
     margin: 50px 0 24px 0;
   }
 }
-
 @media (max-width: 828px) and (max-width: 828px) {
   #p-nosotros #nosotros .container {
     -webkit-box-orient: vertical;
@@ -1054,7 +976,6 @@ footer {
   height: 248px;
   font-size: 16px;
 }
-
 footer :first-child {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1064,18 +985,15 @@ footer :first-child {
       -ms-flex-direction: column;
           flex-direction: column;
 }
-
 footer :first-child img {
   max-width: 76px;
   width: 100%;
   height: auto;
   margin-bottom: 9px;
 }
-
 footer :first-child p {
   line-height: 24px;
 }
-
 footer :nth-child(2) {
   font-size: 14px;
   display: -webkit-box;
@@ -1086,21 +1004,18 @@ footer :nth-child(2) {
       -ms-flex-direction: column;
           flex-direction: column;
 }
-
 footer :nth-child(2) a {
   text-decoration: none;
   color: #000;
   margin: 12px 0 12px 0;
 }
-
 footer :last-child p {
   margin-bottom: 9px;
 }
-
-footer :last-child :nth-child(2), footer :last-child :last-child {
+footer :last-child :nth-child(2),
+footer :last-child :last-child {
   font-size: 14px;
 }
-
 @media (max-width: 828px) {
   footer {
     -webkit-box-orient: vertical;
@@ -1113,5 +1028,4 @@ footer :last-child :nth-child(2), footer :last-child :last-child {
     margin: 32px 0px 18px 31px;
     height: 504px;
   }
-}
-/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=styles.css.map */
