--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -294,6 +294,79 @@ nav {
       height: auto;
     }
   }
+
+  #p-videos {
+    background-color: $bgCrema;
+    height: auto;
+    width: 100%;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    @media (max-width: 828px) {
+      padding: 2rem 1rem;
+    }
+
+    h2 {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+
+    .container {
+      display: flex;
+      padding: 0 20vw;
+      justify-content: center;
+      align-items: center;
+      margin: 1rem 0;
+
+      @media (max-width: 828px) {
+        flex-direction: column;
+        padding: 0;
+      }
+    }
+
+    .top {
+      img {
+        margin-right: 1rem;
+        @media (max-width: 828px) {
+          margin: 0;
+        }
+      }
+
+      p {
+        margin-left: 1rem;
+        @media (max-width: 828px) {
+          margin: 0;
+          margin-top: 1rem;
+        }
+      }
+    }
+
+    .bottom {
+      @media (max-width: 828px) {
+        flex-direction: column-reverse;
+      }
+
+      img {
+        margin-left: 1rem;
+
+        @media (max-width: 828px) {
+          margin: 0;
+        }
+      }
+
+      p {
+        margin-right: 1rem;
+
+        @media (max-width: 828px) {
+          margin: 0;
+          margin-top: 1rem;
+        }
+      }
+    }
+  }
 }
 
 /**Seccion introduccion proyectos**/
