--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -327,7 +327,7 @@ nav {
       }
 
       img {
-        @media (max-width: 551) {
+        @media (max-width: 551px) {
           width: 300px;
           height: auto;
         }
