--- a/css/styles.css
+++ b/css/styles.css
@@ -452,8 +452,89 @@ nav .navB {
     margin-top: 1rem;
   }
 }
+#p-index #p-contactanos {
+  background-color: #F2ECDE;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 3rem 0;
+}
+@media (max-width: 828px) {
+  #p-index #p-contactanos h2 {
+    font-size: 36px;
+  }
+}
+#p-index #p-contactanos .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+@media (max-width: 551px) {
+  #p-index #p-contactanos .container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+#p-index #p-contactanos .container .logo {
+  width: 50%;
+  height: auto;
+  margin-right: 1.5rem;
+}
+@media (max-width: 551px) {
+  #p-index #p-contactanos .container .logo {
+    display: none;
+  }
+}
+#p-index #p-contactanos .container .datos {
+  margin-left: 1.5rem;
+}
+@media (max-width: 551px) {
+  #p-index #p-contactanos .container .datos {
+    margin: 1rem 0 0 0;
+    text-align: center;
+  }
+}
+#p-index #p-contactanos .container .datos h4 {
+  font-size: 32px;
+  font-family: "Playfair Display", serif;
+}
+@media (max-width: 828px) {
+  #p-index #p-contactanos .container .datos h4 {
+    font-size: 24px;
+  }
+}
+#p-index #p-contactanos .container .datos .iconos .linea {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 2rem;
+}
+#p-index #p-contactanos .container .datos .iconos .linea p {
+  margin-left: 1rem;
+}
 
 /**Seccion introduccion proyectos**/
+#introProyectos {
+  padding-bottom: 2rem;
+}
 #introProyectos h2 {
   margin: 31px 0 72px 0;
 }
