--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -373,11 +373,76 @@ nav {
       }
     }
   }
+
+  #p-contactanos {
+    background-color: $bgCrema;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 3rem 0;
+
+    h2 {
+      @media (max-width: 828px) {
+        font-size: $headline3;
+      }
+    }
+
+    .container {
+      display: flex;
+      align-items: center;
+
+      @media (max-width: 551px) {
+        flex-direction: column;
+      }
+
+      .logo {
+        width: 50%;
+        height: auto;
+        margin-right: 1.5rem;
+
+        @media (max-width: 551px) {
+          display: none;
+        }
+      }
+
+      .datos {
+        margin-left: 1.5rem;
+
+        @media (max-width: 551px) {
+          margin: 1rem 0 0 0;
+          text-align: center;
+        }
+
+        h4 {
+          font-size: $headline4;
+          font-family: "Playfair Display", serif;
+          @media (max-width: 828px) {
+            font-size: $headline6;
+          }
+        }
+
+        .iconos {
+          .linea {
+            display: flex;
+            align-items: center;
+            margin-top: 2rem;
+
+            p {
+              margin-left: 1rem;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
 /**Seccion introduccion proyectos**/
 
 #introProyectos {
+  padding-bottom: 2rem;
+
   @extend %flexContainer;
   h2 {
     margin: 31px 0 72px 0;
