--- a/css/styles.css
+++ b/css/styles.css
@@ -156,6 +156,7 @@ nav .cajaNav {
           justify-content: space-between;
   -webkit-box-shadow: 4px 4px whitesmoke;
           box-shadow: 4px 4px whitesmoke;
+  border-bottom: 1px solid #dadada;
 }
 nav .cajaNav .barNav {
   margin: 0 10px 0 0;
@@ -210,7 +211,7 @@ nav .cajaNav .titNav .toggle {
   display: none;
 }
 nav .cajaNav .titNav img {
-  width: 123px;
+  width: 110px;
   height: auto;
 }
 nav .cajaNav .botones {
