Añadir CDN FontAwesome y agregar cruz al navbar

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -249,6 +249,13 @@ nav {
         display: block;
         cursor: pointer;
         order: 4;
+        height: 2rem;
+        width: 3rem;
+        font-size: 1.5rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
       }
       .botones {
         order: 3;
