--- a/css/styles.css
+++ b/css/styles.css
@@ -296,6 +296,22 @@ nav .navB {
     -webkit-box-ordinal-group: 5;
         -ms-flex-order: 4;
             order: 4;
+    height: 2rem;
+    width: 3rem;
+    font-size: 1.5rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   nav .cajaNav .botones {
     -webkit-box-ordinal-group: 4;
