Corregir margen menú

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -250,7 +250,8 @@ nav {
         cursor: pointer;
         order: 4;
         height: 2rem;
-        width: 3rem;
+        width: 2rem;
+        margin-right: 1rem;
         font-size: 1.5rem;
         display: flex;
         flex-direction: column;
