--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -157,6 +157,7 @@ nav .cajaNav {
           justify-content: space-between;
   -webkit-box-shadow: 4px 4px whitesmoke;
           box-shadow: 4px 4px whitesmoke;
+  border-bottom: 1px solid #dadada;
 }
 nav .cajaNav .barNav {
   margin: 0 10px 0 0;
@@ -211,7 +212,7 @@ nav .cajaNav .titNav .toggle {
   display: none;
 }
 nav .cajaNav .titNav img {
-  width: 123px;
+  width: 110px;
   height: auto;
 }
 nav .cajaNav .botones {
@@ -296,6 +297,23 @@ nav .navB {
     -webkit-box-ordinal-group: 5;
         -ms-flex-order: 4;
             order: 4;
+    height: 2rem;
+    width: 2rem;
+    margin-right: 1rem;
+    font-size: 1.5rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   nav .cajaNav .botones {
     -webkit-box-ordinal-group: 4;
@@ -1010,6 +1028,17 @@ nav .navB {
 }
 #p-nosotros #nosotros #landing h1 {
   margin-bottom: 20px;
+  line-height: 4rem;
+}
+@media (max-width: 551px) {
+  #p-nosotros #nosotros #landing h1 {
+    line-height: 2.5rem;
+  }
+}
+@media (max-width: 551px) {
+  #p-nosotros #nosotros #landing h1 {
+    line-height: 3.25rem;
+  }
 }
 #p-nosotros #nosotros #landing img {
   margin: 20px 0;
@@ -1284,7 +1313,7 @@ body {
 }
 
 .proyecto {
-  width: 100%;
+  width: 100vw;
 }
 .proyecto .g-title {
   height: 10vh;
@@ -1480,5 +1509,200 @@ body {
   .proyecto .masProyectos .contenedorCards .card1,
 .proyecto .masProyectos .contenedorCards .card3 {
     margin-top: 0;
+  }
+}
+
+nav .cajaNav {
+  font-family: "Nunito Sans", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-shadow: 4px 4px whitesmoke;
+          box-shadow: 4px 4px whitesmoke;
+  border-bottom: 1px solid #dadada;
+}
+nav .cajaNav .barNav {
+  margin: 0 10px 0 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+nav .cajaNav .barNav li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 20px;
+  height: 100%;
+}
+nav .cajaNav .barNav li:hover {
+  cursor: pointer;
+}
+nav .cajaNav .barNav li a {
+  text-decoration: none;
+  cursor: pointer;
+  color: inherit;
+}
+nav .cajaNav .titNav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #000;
+  height: auto;
+  width: 348px;
+}
+nav .cajaNav .titNav .toggle {
+  display: none;
+}
+nav .cajaNav .titNav img {
+  width: 110px;
+  height: auto;
+}
+nav .cajaNav .botones {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 340px;
+}
+nav .cajaNav .botones a {
+  text-decoration: none;
+  margin: 0 40px 0 0;
+}
+nav .cajaNav .toggle {
+  display: none;
+}
+nav .navB {
+  display: none;
+}
+@media (max-width: 828px) {
+  nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  nav .navB {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    list-style: none;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background-color: #f2ecde;
+    font-family: "Nunito Sans", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+  }
+  nav .navB li {
+    padding: 50px;
+  }
+  nav .navB li a {
+    text-decoration: none;
+    color: #000;
+  }
+  nav .cajaNav {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  nav .cajaNav .navA {
+    display: none;
+  }
+  nav .cajaNav .titNav {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+  nav .cajaNav .toggle {
+    display: block;
+    cursor: pointer;
+    -webkit-box-ordinal-group: 5;
+        -ms-flex-order: 4;
+            order: 4;
+    height: 2rem;
+    width: 2rem;
+    margin-right: 1rem;
+    font-size: 1.5rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  nav .cajaNav .botones {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+    margin: 0 10px;
+  }
+  nav .cajaNav .botones a {
+    margin: 10px;
+  }
+  nav .abierto {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+  }
+  nav .cerrado {
+    display: none !important;
   }
 }/*# sourceMappingURL=proyectos.css.map */
