--- a/css/styles.css
+++ b/css/styles.css
@@ -297,7 +297,8 @@ nav .navB {
         -ms-flex-order: 4;
             order: 4;
     height: 2rem;
-    width: 3rem;
+    width: 2rem;
+    margin-right: 1rem;
     font-size: 1.5rem;
     display: -webkit-box;
     display: -ms-flexbox;
