--- a/scss/proyectos.scss
+++ b/scss/proyectos.scss
@@ -61,7 +61,7 @@ body {
 }
 
 .proyecto {
-  width: 100%;
+  width: 100vw;
   .g-title {
     height: 10vh;
     display: none;
@@ -182,6 +182,134 @@ body {
           margin-top: 0;
         }
       }
+    }
+  }
+}
+
+nav {
+  .cajaNav {
+    font-family: "Nunito Sans", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    display: flex;
+    justify-content: space-between;
+    box-shadow: 4px 4px whitesmoke;
+    border-bottom: 1px solid #dadada;
+
+    .barNav {
+      margin: 0 10px 0 0;
+      display: flex;
+      list-style: none;
+      align-items: center;
+      padding: 0;
+      flex-grow: 1;
+      justify-content: space-evenly;
+      li {
+        display: flex;
+        align-items: center;
+        padding: 0 20px;
+        height: 100%;
+        &:hover {
+          cursor: pointer;
+        }
+        a {
+          text-decoration: none;
+          cursor: pointer;
+          color: inherit;
+        }
+      }
+    }
+    .titNav {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      color: #000;
+      height: auto;
+      width: 348px;
+      .toggle {
+        display: none;
+      }
+      img {
+        width: 110px;
+        height: auto;
+      }
+    }
+    .botones {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      width: 340px;
+      a {
+        text-decoration: none;
+        margin: 0 40px 0 0;
+      }
+    }
+    .toggle {
+      display: none;
+    }
+  }
+  .navB {
+    display: none;
+  }
+
+  @media (max-width: 828px) {
+    display: flex;
+    flex-direction: column;
+    .navB {
+      display: flex;
+      flex-direction: column;
+      list-style: none;
+      align-items: center;
+      background-color: #f2ecde;
+      font-family: "Nunito Sans", sans-serif;
+      font-weight: 700;
+      font-size: 18px;
+      li {
+        padding: 50px;
+        a {
+          text-decoration: none;
+          color: #000;
+        }
+      }
+    }
+    .cajaNav {
+      flex-direction: row;
+      align-items: center;
+      .navA {
+        display: none;
+      }
+      .titNav {
+        justify-content: flex-start;
+        order: 1;
+      }
+      .toggle {
+        display: block;
+        cursor: pointer;
+        order: 4;
+        height: 2rem;
+        width: 2rem;
+        margin-right: 1rem;
+        font-size: 1.5rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      }
+      .botones {
+        order: 3;
+        justify-content: flex-end;
+        flex-grow: 1;
+        margin: 0 10px;
+        a {
+          margin: 10px;
+        }
+      }
+    }
+    .abierto {
+      display: flex !important;
+    }
+    .cerrado {
+      display: none !important;
     }
   }
 }
