--- a/css/styles.css
+++ b/css/styles.css
@@ -17,14 +17,12 @@ body {
   text-align: center;
   line-height: 3rem;
 }
-
 @media (max-width: 828px) {
   .g-tituloPrincipal {
     margin-top: 44px;
     font-size: 36px;
   }
 }
-
 @media (max-width: 551px) {
   .g-tituloPrincipal {
     font-size: 32px;
@@ -35,7 +33,6 @@ body {
   font-size: 45px;
   font-family: "Playfair Display", serif;
 }
-
 @media (max-width: 828px) {
   .g-tituloSeccion {
     font-size: 28px;
@@ -47,7 +44,6 @@ body {
   font-family: "Playfair Display", serif;
   font-weight: 700;
 }
-
 @media (max-width: 828px) {
   .g-tituloCards {
     font-size: 24px;
@@ -117,7 +113,6 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 .g-coordinemos-container > * {
   margin: 15px 0;
 }
@@ -126,17 +121,15 @@ body {
   width: 100%;
   background: #F2ECDE;
 }
-
 .g-contacto :first-child {
   margin: 100px 0 11px 0;
 }
-
 .g-contacto :last-child {
   margin: 35px 0 120px 0;
 }
 
 /**Mixins y extends**/
-.g-contacto, #introProyectos, #proyectos, #p-servicios #principalServicios, #p-servicios #arquitecturaGeneral, #p-servicios #renovar, #p-nosotros #nosotros {
+#p-nosotros #nosotros, #p-servicios #renovar, #p-servicios #arquitecturaGeneral, #p-servicios #principalServicios, #proyectos, #introProyectos, .g-contacto {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -158,7 +151,6 @@ nav {
   background-color: #ffffff;
   top: 0;
 }
-
 nav .cajaNav {
   font-family: "Nunito Sans", sans-serif;
   font-weight: 700;
@@ -173,7 +165,6 @@ nav .cajaNav {
           box-shadow: 4px 4px whitesmoke;
   border-bottom: 1px solid #dadada;
 }
-
 nav .cajaNav .barNav {
   margin: 0 10px 0 0;
   display: -webkit-box;
@@ -191,7 +182,6 @@ nav .cajaNav .barNav {
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
 }
-
 nav .cajaNav .barNav li {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -202,17 +192,14 @@ nav .cajaNav .barNav li {
   padding: 0 20px;
   height: 100%;
 }
-
 nav .cajaNav .barNav li:hover {
   cursor: pointer;
 }
-
 nav .cajaNav .barNav li a {
   text-decoration: none;
   cursor: pointer;
   color: inherit;
 }
-
 nav .cajaNav .titNav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -227,16 +214,13 @@ nav .cajaNav .titNav {
   height: auto;
   width: 348px;
 }
-
 nav .cajaNav .titNav .toggle {
   display: none;
 }
-
 nav .cajaNav .titNav img {
   width: 110px;
   height: auto;
 }
-
 nav .cajaNav .botones {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -249,20 +233,16 @@ nav .cajaNav .botones {
           align-items: center;
   width: 340px;
 }
-
 nav .cajaNav .botones a {
   text-decoration: none;
   margin: 0 40px 0 0;
 }
-
 nav .cajaNav .toggle {
   display: none;
 }
-
 nav .navB {
   display: none;
 }
-
 @media (max-width: 828px) {
   nav {
     display: -webkit-box;
@@ -384,26 +364,22 @@ nav .navB {
           justify-content: center;
   text-align: center;
 }
-
 #p-index #landing p {
   padding: 10px;
   margin: 20px 0;
   font-size: 18px;
 }
-
 @media (max-width: 828px) {
   #p-index #landing p {
     font-size: 16px;
   }
 }
-
 #p-index #landing img {
   margin: 20px 0;
   width: 100%;
   max-width: 1040px;
   height: auto;
 }
-
 #p-index #p-videos {
   background-color: #F2ECDE;
   height: auto;
@@ -422,18 +398,21 @@ nav .navB {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 @media (max-width: 828px) {
   #p-index #p-videos {
     padding: 2rem 1rem;
   }
 }
-
 #p-index #p-videos h2 {
   text-align: center;
   margin-bottom: 2rem;
+  padding: 0 20%;
 }
-
+@media (max-width: 828px) {
+  #p-index #p-videos h2 {
+    padding: 0;
+  }
+}
 #p-index #p-videos .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -447,7 +426,6 @@ nav .navB {
           align-items: center;
   margin: 1rem 0;
 }
-
 @media (max-width: 828px) {
   #p-index #p-videos .container {
     -webkit-box-orient: vertical;
@@ -457,35 +435,29 @@ nav .navB {
     padding: 0;
   }
 }
-
 @media (max-width: 551px) {
   #p-index #p-videos .container .video {
     width: 300px;
     height: auto;
   }
 }
-
 #p-index #p-videos .top .video {
   margin-right: 1rem;
 }
-
 @media (max-width: 828px) {
   #p-index #p-videos .top .video {
     margin: 0;
   }
 }
-
 #p-index #p-videos .top p {
   margin-left: 1rem;
 }
-
 @media (max-width: 828px) {
   #p-index #p-videos .top p {
     margin: 0;
     margin-top: 1rem;
   }
 }
-
 @media (max-width: 828px) {
   #p-index #p-videos .bottom {
     -webkit-box-orient: vertical;
@@ -494,28 +466,23 @@ nav .navB {
             flex-direction: column-reverse;
   }
 }
-
 #p-index #p-videos .bottom .video {
   margin-left: 1rem;
 }
-
 @media (max-width: 828px) {
   #p-index #p-videos .bottom .video {
     margin: 0;
   }
 }
-
 #p-index #p-videos .bottom p {
   margin-right: 1rem;
 }
-
 @media (max-width: 828px) {
   #p-index #p-videos .bottom p {
     margin: 0;
     margin-top: 1rem;
   }
 }
-
 #p-index #p-contactanos {
   background-color: #F2ECDE;
   display: -webkit-box;
@@ -533,13 +500,11 @@ nav .navB {
           justify-content: center;
   padding: 3rem 0;
 }
-
 @media (max-width: 828px) {
   #p-index #p-contactanos h2 {
     font-size: 36px;
   }
 }
-
 #p-index #p-contactanos .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -548,7 +513,6 @@ nav .navB {
       -ms-flex-align: center;
           align-items: center;
 }
-
 @media (max-width: 551px) {
   #p-index #p-contactanos .container {
     -webkit-box-orient: vertical;
@@ -557,41 +521,34 @@ nav .navB {
             flex-direction: column;
   }
 }
-
 #p-index #p-contactanos .container .logo {
   width: 50%;
   height: auto;
   margin-right: 1.5rem;
 }
-
 @media (max-width: 551px) {
   #p-index #p-contactanos .container .logo {
     display: none;
   }
 }
-
 #p-index #p-contactanos .container .datos {
   margin-left: 1.5rem;
 }
-
 @media (max-width: 551px) {
   #p-index #p-contactanos .container .datos {
     margin: 1rem 0 0 0;
     text-align: center;
   }
 }
-
 #p-index #p-contactanos .container .datos h4 {
   font-size: 32px;
   font-family: "Playfair Display", serif;
 }
-
 @media (max-width: 828px) {
   #p-index #p-contactanos .container .datos h4 {
     font-size: 24px;
   }
 }
-
 #p-index #p-contactanos .container .datos .iconos .linea {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -601,7 +558,6 @@ nav .navB {
           align-items: center;
   margin-top: 2rem;
 }
-
 #p-index #p-contactanos .container .datos .iconos .linea p {
   margin-left: 1rem;
 }
@@ -610,15 +566,12 @@ nav .navB {
 #introProyectos {
   padding-bottom: 2rem;
 }
-
 #introProyectos h2 {
   margin: 31px 0 60px 0;
 }
-
 #introProyectos p {
   margin: 20px;
 }
-
 #introProyectos .contenedorCards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -630,7 +583,6 @@ nav .navB {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
 }
-
 #introProyectos .contenedorCards .cards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -645,21 +597,18 @@ nav .navB {
   padding: 10px;
   font-size: 18px;
 }
-
 #introProyectos .contenedorCards .cards img {
   width: auto;
   height: 424px;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 @media (max-width: 1052px) {
   #introProyectos .contenedorCards .cards {
     max-width: 256px;
     font-size: 16px;
   }
 }
-
 @media (max-width: 828px) {
   #introProyectos .contenedorCards {
     -webkit-box-pack: center;
@@ -672,7 +621,6 @@ nav .navB {
     max-width: 256px;
   }
 }
-
 @media (max-width: 551px) {
   #introProyectos .contenedorCards {
     display: -webkit-box;
@@ -687,22 +635,18 @@ nav .navB {
     max-width: 328px;
   }
 }
-
 #introProyectos .contenedorCards h5 {
   margin-top: 20px;
 }
-
 #introProyectos .contenedorCards .card1 {
   margin-top: 192px;
 }
-
 #introProyectos .contenedorCards .card3 {
   margin-top: 120px;
 }
-
 @media (max-width: 827px) {
   #introProyectos .contenedorCards .card1,
-  #introProyectos .contenedorCards .card3 {
+#introProyectos .contenedorCards .card3 {
     margin-top: 0;
   }
 }
@@ -711,28 +655,23 @@ nav .navB {
 #proyectos h1 {
   margin-bottom: 48px;
 }
-
 #proyectos p {
   max-width: 686px;
   margin-bottom: 48px;
   font-size: 18px;
 }
-
 @media (max-width: 828px) {
   #proyectos p {
     font-size: 16px;
   }
 }
-
 #proyectos a {
   text-decoration: none;
   color: #000;
 }
-
 #proyectos a:visited {
   color: #000;
 }
-
 #proyectos .contenedorCards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -750,7 +689,6 @@ nav .navB {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 #proyectos .contenedorCards .cards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -765,21 +703,18 @@ nav .navB {
   padding: 10px;
   font-size: 18px;
 }
-
 #proyectos .contenedorCards .cards img {
   width: auto;
   height: 424px;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 @media (max-width: 1052px) {
   #proyectos .contenedorCards .cards {
     max-width: 256px;
     font-size: 16px;
   }
 }
-
 @media (max-width: 828px) {
   #proyectos .contenedorCards {
     -webkit-box-pack: center;
@@ -792,7 +727,6 @@ nav .navB {
     max-width: 256px;
   }
 }
-
 @media (max-width: 551px) {
   #proyectos .contenedorCards {
     display: -webkit-box;
@@ -807,32 +741,26 @@ nav .navB {
     max-width: 328px;
   }
 }
-
 #proyectos .contenedorCards h5 {
   margin: 28px 0 28px 0;
 }
-
 #proyectos .contenedorCards .card5 {
   margin-top: -70px;
 }
-
 #proyectos .contenedorCards .card1,
 #proyectos .contenedorCards .card4 {
   margin-top: 106px;
 }
-
 #proyectos .contenedorCards .card3,
 #proyectos .contenedorCards .card6 {
   margin-top: 42px;
 }
-
 #proyectos .contenedorCards .underline {
   font-size: 18px;
   font-weight: 400;
   color: #3FAF67;
   text-decoration: underline;
 }
-
 @media (max-width: 827px) {
   #proyectos .contenedorCards .cards {
     margin-top: 0;
@@ -843,7 +771,6 @@ nav .navB {
 #p-servicios #principalServicios h1 {
   margin-bottom: 28px;
 }
-
 #p-servicios #principalServicios img {
   width: 100%;
   height: auto;
@@ -852,22 +779,18 @@ nav .navB {
   max-height: 424px;
   margin: 30px 0 67px 0;
 }
-
 #p-servicios #principalServicios .textBox {
   max-width: 650px;
   margin-top: 25px;
 }
-
 #p-servicios #principalServicios p {
   font-size: 18px;
 }
-
 @media (max-width: 828px) {
   #p-servicios #principalServicios p {
     font-size: 16px;
   }
 }
-
 #p-servicios #principalServicios .contenedorCards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -880,7 +803,6 @@ nav .navB {
       flex-wrap: nowrap;
   padding-bottom: 50px;
 }
-
 #p-servicios #principalServicios .contenedorCards .cards {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -895,21 +817,18 @@ nav .navB {
   padding: 10px;
   font-size: 18px;
 }
-
 #p-servicios #principalServicios .contenedorCards .cards img {
   width: auto;
   height: 424px;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 @media (max-width: 1052px) {
   #p-servicios #principalServicios .contenedorCards .cards {
     max-width: 190px;
     font-size: 16px;
   }
 }
-
 @media (max-width: 828px) {
   #p-servicios #principalServicios .contenedorCards {
     -webkit-box-pack: center;
@@ -922,7 +841,6 @@ nav .navB {
     max-width: 256px;
   }
 }
-
 @media (max-width: 551px) {
   #p-servicios #principalServicios .contenedorCards {
     display: -webkit-box;
@@ -937,33 +855,27 @@ nav .navB {
     max-width: 328px;
   }
 }
-
 #p-servicios #principalServicios .contenedorCards .segundoContenedor {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
-
 #p-servicios #principalServicios .contenedorCards .segundoContenedor .cardImg {
   margin-bottom: 21px;
 }
-
 #p-servicios #principalServicios .contenedorCards .segundoContenedor .card2,
 #p-servicios #principalServicios .contenedorCards .segundoContenedor .card4 {
   margin-top: 160px;
 }
-
 @media (max-width: 828px) {
   #p-servicios #principalServicios .contenedorCards .segundoContenedor .card2,
-  #p-servicios #principalServicios .contenedorCards .segundoContenedor .card4 {
+#p-servicios #principalServicios .contenedorCards .segundoContenedor .card4 {
     margin-top: 0;
   }
 }
-
 #p-servicios #principalServicios .contenedorCards .segundoContenedor h3 {
   margin-bottom: 8px;
 }
-
 @media (max-width: 551px) {
   #p-servicios #principalServicios .contenedorCards .segundoContenedor {
     -webkit-box-orient: vertical;
@@ -972,16 +884,13 @@ nav .navB {
             flex-direction: column;
   }
 }
-
 #p-servicios #arquitecturaGeneral {
   background-color: #F2ECDE;
   padding: 60px;
 }
-
 #p-servicios #arquitecturaGeneral h2 {
   margin-bottom: 56px;
 }
-
 #p-servicios #arquitecturaGeneral .contenedorArquitectura {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -991,33 +900,28 @@ nav .navB {
           align-items: center;
   text-align: start;
 }
-
 #p-servicios #arquitecturaGeneral .contenedorArquitectura img {
   width: 100%;
   height: auto;
   max-width: 508px;
   margin-right: 10px;
 }
-
 #p-servicios #arquitecturaGeneral .contenedorArquitectura p {
   width: 100%;
   height: auto;
   max-width: 508px;
   font-size: 16px;
 }
-
 @media (max-width: 1052px) {
   #p-servicios #arquitecturaGeneral .contenedorArquitectura img {
     max-width: 400px;
   }
 }
-
 @media (max-width: 828px) {
   #p-servicios #arquitecturaGeneral .contenedorArquitectura img {
     max-width: 256px;
   }
 }
-
 @media (max-width: 600px) {
   #p-servicios #arquitecturaGeneral {
     padding: 58px 16px 64px 16px;
@@ -1034,7 +938,6 @@ nav .navB {
     max-width: 328px;
   }
 }
-
 #p-servicios #renovar .imagen {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1047,7 +950,6 @@ nav .navB {
       flex-wrap: nowrap;
   margin-top: 48px;
 }
-
 #p-servicios #renovar .imagen .contenedorImagen {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1055,7 +957,6 @@ nav .navB {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
 }
-
 #p-servicios #renovar .imagen .contenedorImagen img {
   max-width: 508px;
   width: 100%;
@@ -1064,17 +965,14 @@ nav .navB {
      object-fit: cover;
   padding: 10px;
 }
-
 #p-servicios #renovar .imagen .contenedorImagen :first-child {
   margin-top: 104px;
 }
-
 @media (max-width: 1052px) {
   #p-servicios #renovar .imagen .contenedorImagen img {
     max-width: 400px;
   }
 }
-
 @media (max-width: 828px) {
   #p-servicios #renovar .imagen .contenedorImagen :first-child {
     margin-top: 0;
@@ -1083,7 +981,6 @@ nav .navB {
     max-width: 352px;
   }
 }
-
 @media (max-width: 740px) {
   #p-servicios #renovar .imagen .contenedorImagen :first-child {
     margin-top: 0;
@@ -1092,7 +989,6 @@ nav .navB {
     max-width: 256px;
   }
 }
-
 @media (max-width: 600px) {
   #p-servicios #renovar .imagen {
     -webkit-box-orient: vertical;
@@ -1113,20 +1009,17 @@ nav .navB {
     max-width: 328px;
   }
 }
-
 #p-servicios #renovar .texto :first-child {
   font-family: "Playfair Display", serif;
   font-size: 32px;
   font-weight: 700;
   margin: 102px 0 24px 0;
 }
-
 #p-servicios #renovar .texto :last-child {
   font-size: 18px;
   max-width: 508px;
   margin-bottom: 120px;
 }
-
 @media (max-width: 828px) {
   #p-servicios #renovar .texto :last-child {
     font-size: 16px;
@@ -1146,31 +1039,26 @@ nav .navB {
       -ms-flex-align: center;
           align-items: center;
 }
-
 #p-nosotros #nosotros #landing h1 {
   margin-bottom: 20px;
   line-height: 4rem;
 }
-
 @media (max-width: 551px) {
   #p-nosotros #nosotros #landing h1 {
     line-height: 2.5rem;
   }
 }
-
 @media (max-width: 551px) {
   #p-nosotros #nosotros #landing h1 {
     line-height: 3.25rem;
   }
 }
-
 #p-nosotros #nosotros #landing img {
   margin: 20px 0;
   width: 90%;
   max-width: 1040px;
   height: auto;
 }
-
 #p-nosotros #nosotros #sobreNosotros {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1181,11 +1069,9 @@ nav .navB {
           flex-direction: column;
   margin-bottom: 72px;
 }
-
 #p-nosotros #nosotros #sobreNosotros h2 {
   margin: 150px 0 48px 0;
 }
-
 #p-nosotros #nosotros .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1198,31 +1084,26 @@ nav .navB {
       -ms-flex-align: center;
           align-items: center;
 }
-
 #p-nosotros #nosotros .container .video {
   width: 350px;
   height: auto;
 }
-
 @media (max-width: 551px) {
   #p-nosotros #nosotros .container .video {
     width: 300px;
   }
 }
-
 #p-nosotros #nosotros .container p {
   max-width: 420px;
   text-align: start;
   margin: 30px;
   font-size: 16px;
 }
-
 @media (max-width: 828px) {
   #p-nosotros #nosotros #sobreNosotros h2 {
     margin: 50px 0 24px 0;
   }
 }
-
 @media (max-width: 828px) and (max-width: 828px) {
   #p-nosotros #nosotros .container {
     -webkit-box-orient: vertical;
@@ -1319,7 +1200,6 @@ footer {
   height: 248px;
   font-size: 16px;
 }
-
 footer :first-child {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1329,18 +1209,15 @@ footer :first-child {
       -ms-flex-direction: column;
           flex-direction: column;
 }
-
 footer :first-child img {
   max-width: 76px;
   width: 100%;
   height: auto;
   margin-bottom: 9px;
 }
-
 footer :first-child p {
   line-height: 24px;
 }
-
 footer :nth-child(2) {
   font-size: 14px;
   display: -webkit-box;
@@ -1351,22 +1228,18 @@ footer :nth-child(2) {
       -ms-flex-direction: column;
           flex-direction: column;
 }
-
 footer :nth-child(2) a {
   text-decoration: none;
   color: #000;
   margin: 12px 0 12px 0;
 }
-
 footer :last-child p {
   margin-bottom: 9px;
 }
-
 footer :last-child :nth-child(2),
 footer :last-child :last-child {
   font-size: 14px;
 }
-
 @media (max-width: 828px) {
   footer {
     -webkit-box-orient: vertical;
@@ -1379,5 +1252,4 @@ footer :last-child :last-child {
     margin: 32px 0px 18px 31px;
     height: 504px;
   }
-}
-/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=styles.css.map */
