--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -150,10 +150,10 @@ body {
 /**Nav**/
 
 nav {
-    position: sticky;
-    width: 100%;
-    background-color: #ffffff;
-    top: 0;
+  position: sticky;
+  width: 100%;
+  background-color: #ffffff;
+  top: 0;
   .cajaNav {
     font-family: "Nunito Sans", sans-serif;
     font-weight: 700;
@@ -324,6 +324,11 @@ nav {
     h2 {
       text-align: center;
       margin-bottom: 2rem;
+      padding: 0 20%;
+
+      @media (max-width: 828px) {
+        padding: 0;
+      }
     }
 
     .container {
