--- a/css/styles.css
+++ b/css/styles.css
@@ -417,7 +417,7 @@ nav .navB {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 0 20vw;
+  padding: 0 2rem;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -425,6 +425,7 @@ nav .navB {
       -ms-flex-align: center;
           align-items: center;
   margin: 1rem 0;
+  max-width: 1000px;
 }
 @media (max-width: 828px) {
   #p-index #p-videos .container {
