--- a/css/styles.css
+++ b/css/styles.css
@@ -437,16 +437,16 @@ nav .navB {
   }
 }
 @media (max-width: 551px) {
-  #p-index #p-videos .container .video {
+  #p-index #p-videos .container .img-new {
     width: 300px;
     height: auto;
   }
 }
-#p-index #p-videos .top .video {
+#p-index #p-videos .top .img-new {
   margin-right: 1rem;
 }
 @media (max-width: 828px) {
-  #p-index #p-videos .top .video {
+  #p-index #p-videos .top .img-new {
     margin: 0;
   }
 }
@@ -467,11 +467,11 @@ nav .navB {
             flex-direction: column-reverse;
   }
 }
-#p-index #p-videos .bottom .video {
+#p-index #p-videos .bottom .img-new {
   margin-left: 1rem;
 }
 @media (max-width: 828px) {
-  #p-index #p-videos .bottom .video {
+  #p-index #p-videos .bottom .img-new {
     margin: 0;
   }
 }
