--- a/scss/proyectos.scss
+++ b/scss/proyectos.scss
@@ -82,6 +82,7 @@ body {
     width: 100%;
     height: auto;
     position: relative;
+    z-index: -1;
     .g-hero-img {
       width: 100%;
       height: auto;
