--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -160,7 +160,9 @@ nav {
     font-size: 18px;
     display: flex;
     justify-content: space-between;
-    box-shadow: 4px 4px whitesmoke;
+    box-shadow: -2px 4px 33px 1px rgba(0, 0, 0, 0.15);
+    -webkit-box-shadow: -2px 4px 33px 1px rgba(0, 0, 0, 0.15);
+    -moz-box-shadow: -2px 4px 33px 1px rgba(0, 0, 0, 0.15);
     border-bottom: 1px solid #dadada;
 
     .barNav {
