--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -98,7 +98,7 @@ body {
 
 .g-coordinemos-container {
   width: 100%;
-  height: 40vh;
+  height: 45vh;
   background-color: #F2ECDE;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -162,8 +162,9 @@ nav .cajaNav {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-shadow: 4px 4px whitesmoke;
-          box-shadow: 4px 4px whitesmoke;
+  box-shadow: -2px 4px 33px 1px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: -2px 4px 33px 1px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: -2px 4px 33px 1px rgba(0, 0, 0, 0.15);
   border-bottom: 1px solid #dadada;
 }
 nav .cajaNav .barNav {
@@ -1538,8 +1539,9 @@ nav .cajaNav {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-shadow: 4px 4px whitesmoke;
-          box-shadow: 4px 4px whitesmoke;
+  box-shadow: -2px 4px 33px 1px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: -2px 4px 33px 1px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: -2px 4px 33px 1px rgba(0, 0, 0, 0.15);
   border-bottom: 1px solid #dadada;
 }
 nav .cajaNav .barNav {
